--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Debug DockerHub Username
+        run: echo "DOCKERHUB_USERNAME is set"
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' }}
+
       - name: Build and push image
         uses: docker/build-push-action@v6
         with:
