--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Debug DockerHub Username
-        run: echo "DOCKERHUB_USERNAME is set"
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' }}
+        run: echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}"
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
       - name: Build and push image
         uses: docker/build-push-action@v6
